# popsicle

./: .cursorignore  .dockerignore  .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LEGACY_PIN.md  Makefile  README.md  article-intent-lang-popsicle.md  skills-lock.json
.cursor/plans/: agent-driven_context_scan_056729a6.plan.md  auto-memory_implementation_fd588c71.plan.md  extract_module_to_external_repo_5e759731.plan.md  issue_tracking_system_ab6fab5f.plan.md  llm_summary_agent_support_b73e14d9.plan.md  memory_phase4-5_+_ui_a409ef89.plan.md  memory_rfc_and_implementation_49896d70.plan.md  (+8 more)
.github/: copilot-instructions.md
.popsicle/: project.yaml  state.db
crates/agent-daemon/: Cargo.toml
crates/agent-daemon/src/: chat_intake.rs  cursor_agent.rs  lib.rs  orchestrator.rs  orchestrator_parse.rs  pipeline_skill.rs  prompt.rs  server_client.rs  stream_json.rs
crates/agent-server/: Cargo.toml
crates/agent-server/src/: approval.rs  chat.rs  lib.rs  main.rs  role.rs  run_log.rs  run_mirror.rs  runtime.rs  workflows.rs  ws.rs
crates/agent-server/src/storage/: memory.rs  mod.rs  postgres.rs
crates/artifact-system/: Cargo.toml
crates/artifact-system/src/: context.rs  document.rs  extractor.rs  guard.rs  lib.rs  task_chunk.rs
crates/artifact-system/tests/: golden.rs  intent_properties.rs
crates/cli-ux/: Cargo.toml  Entitlements.plist  tauri.conf.json
crates/cli-ux/assets/pipelines/: greenfield-product-spec.pipeline.yaml  migration-bootstrap.pipeline.yaml  slice-delivery.pipeline.yaml  tech-decision.pipeline.yaml  weekly-health-check.pipeline.yaml
crates/cli-ux/icons/: icon.icns
crates/cli-ux/src/: agent_runtime_config.rs  cli_install.rs  daemon.rs  gate.rs  global_config.rs  i18n.rs  intent_coder_bundle.rs  intent_coder_resolve.rs  intent_goal_trace.rs  intent_visualizer.rs  lib.rs  main.rs  mermaid_sanitize.rs  pipeline_gate.rs  pipeline_taxonomy.rs  project_config.rs  project_context.rs  self_host.rs  telemetry_bridge.rs  workflow_catalog.rs  workspace.rs  workspace_readers.rs
crates/cli-ux/src/ui/: commands.rs  dto.rs  mod.rs  runtime_commands.rs  state.rs  watcher.rs
crates/cli-ux/tests/: global_config.rs  golden.rs  intent_coder_install.rs  intent_coder_resolve.rs  intent_properties.rs  intent_visualizer.rs  local_workspace.rs  mermaid_diagram_tool.rs  product_health.rs  project_config.rs  project_context.rs  smoke_workflow.rs  telemetry_tool.rs  tsv_workspace.rs  workflow_catalog.rs  workspace_bootstrap.rs  workspace_readers.rs
crates/popsicle-cli/: Cargo.toml  tauri.conf.json
crates/popsicle-cli/capabilities/: default.json
crates/popsicle-cli/src/: main.rs
crates/popsicle-cli/src/commands/: admin.rs  bug.rs  checklist.rs  context.rs  discussion.rs  doc.rs  extract.rs  git.rs  init.rs  issue.rs  item.rs  memory.rs  migrate.rs  mod.rs  module.rs  namespace.rs  pipeline.rs  project.rs  prompt.rs  registry.rs  reinit.rs  skill.rs  spec.rs  story.rs  sync.rs  test.rs  tool.rs  topic.rs
crates/popsicle-cli/src/ui/: commands.rs  mod.rs  watcher.rs
crates/popsicle-core/: Cargo.toml  build.rs
crates/popsicle-core/src/: dto.rs  error.rs  helpers.rs  lib.rs  scaffold.rs  scanner.rs
crates/popsicle-core/src/agent/: mod.rs
crates/popsicle-core/src/engine/: advisor.rs  bootstrap.rs  context.rs  context_layer.rs  extractor.rs  guard.rs  hooks.rs  markdown.rs  mod.rs  recommender.rs
crates/popsicle-core/src/git/: mod.rs  tracker.rs
crates/popsicle-core/src/memory/: mod.rs  model.rs  scoring.rs  store.rs
crates/popsicle-core/src/model/: bug.rs  discussion.rs  document.rs  issue.rs  mod.rs  module.rs  namespace.rs  pipeline.rs  project.rs  skill.rs  spec.rs  story.rs  testcase.rs  tool.rs  topic.rs  work_item.rs
crates/popsicle-core/src/registry/: index.rs  loader.rs  mod.rs  package.rs
crates/popsicle-core/src/storage/: config.rs  file.rs  index.rs  mod.rs
crates/popsicle-sync/: Cargo.toml
crates/popsicle-sync/src/: client.rs  conflict.rs  crdt.rs  error.rs  http.rs  lib.rs  path.rs  types.rs  ws.rs
crates/skill-runtime/: Cargo.toml
crates/skill-runtime/src/: context.rs  domain.rs  inspect.rs  issue.rs  lib.rs  loader.rs  memory_layer.rs  pipeline_session.rs  registry.rs  runs.rs  session_span.rs  skill_load.rs  state_machine.rs  upstream.rs
crates/skill-runtime/tests/: golden.rs  integration.rs  intent_properties.rs
crates/skill-runtime/tests/fixtures/: demo.pipeline.yaml
crates/skill-runtime/tests/fixtures/demo-skill/: skill.yaml
crates/storage/: Cargo.toml
crates/storage/src/: document_row.rs  lib.rs  memory_store.rs  sqlite.rs  workspace.rs
crates/storage/tests/: document_row.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: background.rs  config.rs  export.rs  lib.rs  otlp.rs  report.rs  wal.rs
docs/: AI辅助编程对工程自动化的要求.md  CHARTER.md  MIGRATION.md  PROJECT_CONTEXT.md  design-philosophy.md  glossary.md  module-guide.md  product-roadmap.md  release-guide.md  rfc-auto-memory.md  rfc-document-index.md  rfc-entity-redesign.md  rfc-idd-migration-gaps.md  rfc-multi-agent-discussion-patterns.md  rfc-project-context.md  rfc-scale-adaptive-pipeline.md  rfc-selective-context-injection.md  rfc-simplification.md  rfc-work-item-entities.md  rfc-workflow-only-core.md  skill-guide.md  sync-api.md  ui-architecture.md
example-project/: AGENTS.md  CLAUDE.md
hooks/: pre-commit
intent-coder/: README.md  ROADMAP.md  bootstrap.md  module.yaml
intent-devlopment/: README.md  ROADMAP.md
migration/: progress.md  traceability.md
packaging/: intent-lang-pin.toml
pipelines/: design-only.pipeline.yaml  full-sdlc.pipeline.yaml  impl-test.pipeline.yaml  tech-sdlc.pipeline.yaml  test-only.pipeline.yaml
scripts/: backfill_issue_task_links.py  complete-open-issues.sh  install.sh
ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: commands.rs  main.rs  watcher.rs
vender/intent-lang/crates/intent-cli/: Cargo.toml
vender/intent-lang/crates/intent-cli/src/: main.rs
(+1094 files in other folders)
