[workspace]
resolver = "2"
members = [
    "crates/popsicle-core",
    "crates/popsicle-cli",
    "ui/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/popsicle"

[workspace.dependencies]
popsicle-core = { path = "crates/popsicle-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
toml = "0.8"
tokio = { version = "1", features = ["full"] }
