[workspace]
resolver = "2"

# Member crates live at the workspace root under crates/<slice>/ (crate = slice),
# per ADR-003 (workspace layout, Accepted 2026-06-08). The three slices
# (skill-runtime / artifact-system / cli-ux) belong to the single popsicle product;
# products/<slice>/ holds IDD docs in parallel. The glob is empty until the first
# crate (crates/skill-runtime) lands during the in-shadow phase (see migration/progress.md).
members = ["crates/*"]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["popsicle-lab"]
repository = "https://github.com/popsicle-lab/popsicle-new"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
artifact-system = { path = "crates/artifact-system" }
skill-runtime = { path = "crates/skill-runtime" }
storage = { path = "crates/storage" }
telemetry = { path = "crates/telemetry" }
