[package]
name = "agent-daemon"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Local agent-runtime daemon: popsicle subprocess + runtime status (ADR-001)."

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tempfile = "3"
