[package]
name = "agent-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "agent-runtime coordination server: task queue + poll API (ADR-001)."

[[bin]]
name = "agent-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "json", "chrono"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
