[package]
name = "artifact-system"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "artifact-system product — second in-shadow implementation slice (ADR-003/ADR-004; mirrors Z3-verified intents)."

# No runtime dependencies: like skill-runtime this is a minimal, verifiable base
# driven from products/artifact-system/intents/*.intent. The legacy engine uses
# serde / serde_yaml_ng / regex / serde_json / uuid; those are deferred until the
# equivalence-baseline milestone genuinely needs wire-format byte parity. Staying
# dependency-free keeps the shadow auditable against the formal intents.
[dependencies]
