[package]
name = "cli-ux"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
build = "build.rs"

[lib]
name = "cli_ux"
path = "src/lib.rs"

[[bin]]
name = "popsicle"
path = "src/main.rs"

[features]
default = []
ui = ["dep:tauri", "dep:tauri-plugin-shell", "tauri-build"]

[dependencies]
artifact-system.workspace = true
skill-runtime.workspace = true
storage.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tauri = { version = "2", optional = true }
tauri-plugin-shell = { version = "2", optional = true }

[build-dependencies]
tauri-build = { version = "2", optional = true }
