[package]
name = "cli-ux"
version = "0.6.3"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
build = "build.rs"

[lib]
name = "cli_ux"
path = "src/lib.rs"

[[bin]]
name = "popsicle"
path = "src/main.rs"

[features]
default = ["ui"]
ui = [
    "dep:tauri",
    "dep:tauri-plugin-shell",
    "dep:rfd",
    "dep:intent-lang-visualizer",
    "dep:notify",
    "tauri-build",
]

[dependencies]
artifact-system.workspace = true
skill-runtime.workspace = true
storage.workspace = true
telemetry.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
include_dir = "0.7"
tauri = { version = "2", optional = true , features = [] }
tauri-plugin-shell = { version = "2", optional = true }
rfd = { version = "0.15", optional = true }
intent-lang-syntax = { version = "0.1.3" }
intent-lang-visualizer = { version = "0.1.3", optional = true }
notify = { version = "7", optional = true }

[build-dependencies]
tauri-build = { version = "2", optional = true , features = [] }

[[test]]
name = "intent_visualizer"
required-features = ["ui"]
