[package]
name = "popsicle-cli"
description = "CLI for Popsicle: spec-driven development orchestration"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "popsicle"
path = "src/main.rs"

[features]
default = []
ui = ["dep:tauri", "dep:tauri-plugin-shell", "dep:tauri-build"]

[dependencies]
popsicle-core = { workspace = true }
popsicle-sync = { workspace = true }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tempfile = "3"
tokio = { workspace = true }
keyring = "3"
rpassword = "7"
dirs = "5"
uuid = { workspace = true }
notify = "7"
tauri = { version = "2", features = [], optional = true }
tauri-plugin-shell = { version = "2", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
notify = { version = "7", features = ["macos_fsevent"] }

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }
