[package]
name = "popsicle-core"
description = "Core library for Popsicle: spec-driven development orchestration engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rusqlite = { workspace = true }
regex = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = "3"
