[package]
name = "popsicle-sync"
description = "Sync client for Popsicle: talks to a popsicle-cloud-compatible API"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
popsicle-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
async-trait = "0.1"
url = "2"
base64 = "0.22"
yrs = "0.25"
tokio-tungstenite = { version = "0.24", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
futures-util = "0.3"

[dev-dependencies]
tokio = { workspace = true }
