[package]
name = "storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared persistence row types (ADR-004 DocumentRow); in-shadow stack bottom."

[dependencies]
artifact-system = { workspace = true }
rusqlite = { version = "0.32", features = ["bundled"] }
