[package]
name = "telemetry"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Agent observability sidecar: OTel WAL + fail-open export (ADR-001)."

[dependencies]
opentelemetry = "0.27"
opentelemetry-otlp = { version = "0.27", features = ["reqwest-blocking-client", "http-proto"] }
opentelemetry_sdk = "0.27"
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread"] }
