[package]
name = "popsicle-tauri"
version = "0.1.0"
edition = "2024"

[dependencies]
popsicle-core = { path = "../../crates/popsicle-core" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = { version = "7", features = ["macos_fsevent"] }
tokio = { version = "1", features = ["sync"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
